Update wall of activites